--- a/app/src/main/res/layout/dialog_exercise_layout_map.xml
+++ b/app/src/main/res/layout/dialog_exercise_layout_map.xml
@@ -6,30 +6,33 @@
 
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_15dp"
-        android:background="@mipmap/ic_hp_yd_bj_1"
+        android:layout_marginTop="@dimen/dp_10"
         android:orientation="vertical"
-        android:paddingTop="@dimen/dimen_15dp">
+        android:paddingTop="@dimen/dp_10">
 
         <LinearLayout
             android:id="@+id/ll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@mipmap/ic_hp_yd_bj_1">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/dp_10">
 
                 <TextView
+                    android:id="@+id/tv_Distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3.2 km"
+                    android:text="0km"
                     android:textColor="@color/color_000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -38,10 +41,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_1"
+                    android:drawableStart="@mipmap/ic_hp_yd_7"
                     android:drawablePadding="@dimen/dimen_2dp"
                     android:text="已行里程"
-                    android:textColor="@color/color_000000"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -50,15 +53,17 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/dp_10">
 
                 <TextView
+                    android:id="@+id/tv_speed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="16.2 km/h"
+                    android:text="0km/h"
                     android:textColor="@color/color_000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -70,7 +75,7 @@
                     android:drawableStart="@mipmap/ic_hp_yd_1"
                     android:drawablePadding="@dimen/dimen_2dp"
                     android:text="当前速度"
-                    android:textColor="@color/color_000000"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -78,12 +83,15 @@
 
             <LinearLayout
                 android:layout_width="@dimen/dimen_100dp"
-                android:layout_height="match_parent"
-                android:gravity="bottom|center_horizontal"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/dp_10">
 
 
                 <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="00:30:00"
@@ -91,22 +99,23 @@
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
-
             </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/dp_10">
 
                 <TextView
+                    android:id="@+id/tv_Calories"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="85 cal"
+                    android:text="0cal"
                     android:textColor="@color/color_000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -118,9 +127,80 @@
                     android:drawableStart="@mipmap/ic_hp_yd_2"
                     android:drawablePadding="@dimen/dimen_2dp"
                     android:text="卡路里"
+                    android:textColor="@color/color_666666"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/dp_10">
+
+                <TextView
+                    android:id="@+id/tv_Pulse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0dpm"
+                    android:textColor="@color/color_000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_3dp"
+                    android:drawableStart="@mipmap/ic_hp_yd_4"
+                    android:drawablePadding="@dimen/dimen_2dp"
+                    android:text="当前心率"
                     android:textColor="@color/color_000000"
                     android:textSize="10sp"
                     android:textStyle="bold" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_ffffff"
+            android:layout_marginTop="-1dp"
+            android:layout_below="@id/ll">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/dp_10">
+
+                <TextView
+                    android:id="@+id/tv_Watt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0w"
+                    android:textColor="@color/color_000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_3dp"
+                    android:drawableStart="@mipmap/ic_hp_yd_2"
+                    android:drawablePadding="@dimen/dimen_2dp"
+                    android:text="功率"
+                    android:textColor="@color/color_666666"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
 
             </LinearLayout>
 
@@ -135,7 +215,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="85 w"
+                    android:text="--"
                     android:textColor="@color/color_000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -144,37 +224,113 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_3"
+                    android:drawableStart="@mipmap/ic_hp_yd_2"
                     android:drawablePadding="@dimen/dimen_2dp"
-                    android:text="功率"
+                    android:text="坡度"
+                    android:textColor="@color/color_666666"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="@dimen/dimen_100dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+                <ImageView
+                    android:id="@+id/iv_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/btn_shape_bj_theme_25"
+                    android:paddingHorizontal="@dimen/dp_10"
+                    android:src="@drawable/icon_jiantou_xia_ff"
+                    android:textColor="@color/color_333333"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/dp_10">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="--"
                     android:textColor="@color/color_000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_3dp"
+                    android:drawableStart="@mipmap/ic_hp_yd_2"
+                    android:drawablePadding="@dimen/dimen_2dp"
+                    android:text="当前强度"
+                    android:textColor="@color/color_666666"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/dp_10">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_hp_yd_5" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/dimen_15dp"
+                        android:text="0"
+                        android:textColor="@color/color_000000"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_hp_yd_6" />
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_3dp"
+                    android:drawableStart="@mipmap/ic_hp_yd_4"
+                    android:drawablePadding="@dimen/dimen_2dp"
+                    android:text="阻力"
+                    android:textColor="#4D4D4D"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
         </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/ll"
-            android:layout_marginVertical="@dimen/dimen_5dp"
-            android:orientation="vertical">
-
-
-            <ImageView
-                android:id="@+id/iv_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@drawable/btn_shape_bj_theme_25"
-                android:paddingHorizontal="@dimen/dp_10"
-                android:src="@drawable/icon_jiantou_xia_ff"
-                android:textColor="@color/color_333333"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
     </RelativeLayout>
 
     <ImageView
@@ -185,5 +341,5 @@
         android:background="@drawable/bnt_circle_start"
         android:gravity="center"
         android:scaleType="center"
-        android:src="@drawable/bnt_yun_dong_type_bf" />
+        android:src="@drawable/ic_yundong_kaishi" />
 </RelativeLayout>
