--- a/app/src/main/res/layout/activity_landscape_map_exercise.xml
+++ b/app/src/main/res/layout/activity_landscape_map_exercise.xml
@@ -12,6 +12,13 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_mpg_image" />
 
+    <ImageView
+        android:id="@+id/iv_dian"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_d_red"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
@@ -33,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/dimen_140dp"
+        android:layout_marginTop="@dimen/dimen_120dp"
         android:layout_marginEnd="@dimen/dimen_20dp"
         android:background="@drawable/bj_circle_fff_4">
 
@@ -43,7 +50,7 @@
             android:layout_margin="6dp"
             android:background="@drawable/bj_circle_dot_999"
             android:gravity="center"
-            android:text="2"
+            android:text="1"
             android:textColor="@color/color_ffffff"
             android:textSize="8sp" />
 
@@ -60,7 +67,7 @@
             android:layout_alignEnd="@id/lsv"
             android:layout_alignBottom="@id/lsv"
             android:drawableStart="@mipmap/ic_hp_yd_13"
-            android:text="2.5km"
+            android:text="0km"
             android:textColor="@color/color_000000"
             android:textSize="8sp" />
     </RelativeLayout>
@@ -90,31 +97,31 @@
 
         <ImageView
             android:id="@+id/iv_1"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="@dimen/dp_10"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:scaleType="center"
             android:src="@mipmap/ic_hp_yd_12" />
 
         <ImageView
             android:id="@+id/iv_2"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="@dimen/dp_10"
-            android:src="@mipmap/ic_hp_yd_9" />
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="center"
+            android:src="@mipmap/ic_hp_yd_9"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/iv_3"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="@dimen/dp_10"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="center"
             android:src="@mipmap/ic_hp_yd_8" />
 
         <ImageView
             android:id="@+id/iv_4"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="@dimen/dp_10"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="center"
             android:src="@mipmap/ic_hp_yd_10" />
 
     </LinearLayout>
