--- a/app/src/main/res/layout/dialog_exercise_layout_1.xml
+++ b/app/src/main/res/layout/dialog_exercise_layout_1.xml
@@ -8,10 +8,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dimen_15dp"
         android:layout_marginTop="@dimen/dimen_15dp"
         android:background="@mipmap/ic_hp_yd_bj"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/dimen_15dp">
 
         <LinearLayout
             android:id="@+id/ll"
@@ -39,10 +39,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_1"
+                    android:drawableStart="@mipmap/ic_hp_yd_7"
                     android:drawablePadding="@dimen/dimen_2dp"
                     android:text="已行里程"
-                    android:textColor="@color/color_000000"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -71,7 +71,7 @@
                     android:drawableStart="@mipmap/ic_hp_yd_1"
                     android:drawablePadding="@dimen/dimen_2dp"
                     android:text="当前速度"
-                    android:textColor="@color/color_000000"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -118,47 +118,11 @@
                     android:drawableStart="@mipmap/ic_hp_yd_2"
                     android:drawablePadding="@dimen/dimen_2dp"
                     android:text="卡路里"
-                    android:textColor="@color/color_000000"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="@dimen/dp_10">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="85 w"
-                    android:textColor="@color/color_000000"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_2"
-                    android:drawablePadding="@dimen/dimen_2dp"
-                    android:text="功率"
-                    android:textColor="@color/color_000000"
-                    android:textSize="10sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/ll">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -186,6 +150,42 @@
                     android:textColor="@color/color_000000"
                     android:textSize="10sp"
                     android:textStyle="bold" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ll">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/dp_10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="85 w"
+                    android:textColor="@color/color_000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_3dp"
+                    android:drawableStart="@mipmap/ic_hp_yd_2"
+                    android:drawablePadding="@dimen/dimen_2dp"
+                    android:text="功率"
+                    android:textColor="@color/color_666666"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
 
             </LinearLayout>
 
@@ -197,40 +197,22 @@
                 android:orientation="vertical"
                 android:padding="@dimen/dp_10">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_hp_yd_5" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/dimen_15dp"
-                        android:text="2.5"
-                        android:textColor="@color/color_000000"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_hp_yd_6" />
-                </LinearLayout>
-
+                    android:text="--"
+                    android:textColor="@color/color_000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_4"
+                    android:drawableStart="@mipmap/ic_hp_yd_2"
                     android:drawablePadding="@dimen/dimen_2dp"
-                    android:text="坡度(max8)"
-                    android:textColor="#4D4D4D"
+                    android:text="坡度"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -264,40 +246,23 @@
                 android:orientation="vertical"
                 android:padding="@dimen/dp_10">
 
-                <LinearLayout
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_hp_yd_5" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/dimen_15dp"
-                        android:text="2.5"
-                        android:textColor="@color/color_000000"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_hp_yd_6" />
-                </LinearLayout>
-
+                    android:text="--"
+                    android:textColor="@color/color_000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_4"
+                    android:drawableStart="@mipmap/ic_hp_yd_2"
                     android:drawablePadding="@dimen/dimen_2dp"
-                    android:text="速度km/h"
-                    android:textColor="#4D4D4D"
+                    android:text="当前强度"
+                    android:textColor="@color/color_666666"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -343,7 +308,7 @@
                     android:layout_marginTop="@dimen/dimen_3dp"
                     android:drawableStart="@mipmap/ic_hp_yd_4"
                     android:drawablePadding="@dimen/dimen_2dp"
-                    android:text="当前强度(max20)"
+                    android:text="阻力"
                     android:textColor="#4D4D4D"
                     android:textSize="10sp"
                     android:textStyle="bold" />
