--- a/app/src/main/res/layout/activity_landscape_map_exercise.xml
+++ b/app/src/main/res/layout/activity_landscape_map_exercise.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+<!--    ic_liezi  ic_mpg_image-->
     <com.jxkj.fit_5a.conpoment.view.RobotView
         android:id="@+id/iv_img"
         android:layout_width="wrap_content"
