--- a/app/src/main/res/layout/fragment_map_finish_1.xml
+++ b/app/src/main/res/layout/fragment_map_finish_1.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_ffffff"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+
+    <ImageView
+        android:id="@+id/iv_xb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/rv_list"
+        android:layout_alignBottom="@id/rv_list"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginBottom="30dp"
+        android:adjustViewBounds="true"
+        android:src="@mipmap/ic_ren_nv" />
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_toEndOf="@id/iv_xb"
         android:overScrollMode="never" />
-</LinearLayout>
+</RelativeLayout>
