--- a/app/src/main/res/layout/activity_facility_add_pp.xml
+++ b/app/src/main/res/layout/activity_facility_add_pp.xml
@@ -25,21 +25,39 @@
             android:orientation="vertical"
             android:padding="@dimen/dimen_15dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/dp_10"
-                android:text="所有品牌"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <View
-                android:layout_width="@dimen/dimen_60dp"
-                android:layout_height="@dimen/dimen_2dp"
-                android:layout_below="@id/tv1"
-                android:layout_marginTop="-5dp"
-                android:background="@drawable/line_shape_bj_select" />
+                <TextView
+                    android:id="@+id/tv1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:text="所有品牌"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="@dimen/dimen_60dp"
+                    android:layout_height="@dimen/dimen_2dp"
+                    android:layout_below="@id/tv1"
+                    android:layout_marginTop="-5dp"
+                    android:background="@drawable/line_shape_bj_select" />
+
+                <TextView
+                    android:id="@+id/tv_show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:text="展示全部"
+                    android:textColor="@color/color_text_theme"
+                    android:textSize="14sp" />
+
+            </RelativeLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_all_list"
@@ -48,33 +66,46 @@
                 android:layout_marginTop="@dimen/dimen_15dp"
                 android:overScrollMode="never" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_30dp"
-                android:drawablePadding="@dimen/dp_10"
-                android:text="视频教程"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="@dimen/dimen_60dp"
-                android:layout_height="@dimen/dimen_2dp"
-                android:layout_below="@id/tv1"
-                android:layout_marginTop="-5dp"
-                android:background="@drawable/line_shape_bj_select" />
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_15dp">
+                android:layout_marginTop="@dimen/dimen_30dp">
 
-                <VideoView
-                    android:id="@+id/video_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_220dp" />
+                <TextView
+                    android:id="@+id/tv2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:text="设备型号"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="@dimen/dimen_60dp"
+                    android:layout_height="@dimen/dimen_2dp"
+                    android:layout_below="@id/tv2"
+                    android:layout_marginTop="-5dp"
+                    android:background="@drawable/line_shape_bj_select" />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/tv2"
+                    android:layout_toEndOf="@id/tv2"
+                    android:textSize="12sp"
+                    android:textColor="@color/color_666666"
+                    android:padding="@dimen/dimen_5dp"
+                    android:text="" />
             </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_sbxh_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_15dp"
+                android:overScrollMode="never" />
 
 
             <View
