--- a/app/src/main/res/layout/activity_facility_add_sb.xml
+++ b/app/src/main/res/layout/activity_facility_add_sb.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="@dimen/dp_10"
-                android:text="所有分类"
+                android:text="运动设备分类"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
