--- a/app/src/main/res/layout/activity_rate_pattern.xml
+++ b/app/src/main/res/layout/activity_rate_pattern.xml
@@ -373,9 +373,10 @@
 
                     <TextView
                         android:id="@+id/tv_v"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/dimen_30dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
                         android:text="00/00"
                         android:textColor="#212121"
                         android:textSize="@dimen/dimen_20dp"
@@ -385,7 +386,6 @@
                         android:id="@+id/iv_jia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/dimen_30dp"
                         android:src="@drawable/ic_jiajian_jian" />
 
                 </LinearLayout>
