--- a/app/src/main/res/layout/item_facility_manage.xml
+++ b/app/src/main/res/layout/item_facility_manage.xml
@@ -5,11 +5,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_75dp"
         android:layout_marginVertical="@dimen/dp_10"
         android:background="@drawable/ic_shade_img"
         android:gravity="center_vertical"
-        android:padding="@dimen/dp_10">
+        android:paddingHorizontal="@dimen/dp_10">
 
         <ImageView
             android:id="@+id/iv_img"
@@ -44,6 +44,7 @@
                 android:layout_marginTop="@dimen/dimen_5dp"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:visibility="gone"
                 android:text="支付Android"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_14" />
