--- a/app/src/main/res/layout/activity_mine_info.xml
+++ b/app/src/main/res/layout/activity_mine_info.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/rl_actionbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_220dp"
         android:background="@mipmap/ic_mine_top">
 
         <ImageView
@@ -22,9 +22,6 @@
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignTop="@id/iv_backImg"
-            android:layout_alignBottom="@id/iv_backImg"
-            android:adjustViewBounds="true"
             android:background="@drawable/btn_shape_bj_f7f" />
 
 
