--- a/app/src/main/res/layout/item_shopping_pinjia.xml
+++ b/app/src/main/res/layout/item_shopping_pinjia.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_10"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/dp_10">
 
     <com.jxkj.fit_5a.conpoment.view.RoundImageView
         android:id="@+id/iv_head_img"
@@ -41,11 +41,11 @@
         android:id="@+id/rv_img_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:layout_below="@id/tv_content"
         android:layout_marginHorizontal="@dimen/dimen_5dp"
         android:layout_marginTop="@dimen/dp_10"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <com.jxkj.fit_5a.conpoment.view.SquareImageView
             android:id="@+id/siv_1"
@@ -85,6 +85,13 @@
             android:src="@mipmap/ic_16" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/rv_img_list"
+        android:layout_marginTop="@dimen/dimen_5dp"
+        android:background="@color/line_color" />
 
 
 </RelativeLayout>
