--- a/app/src/main/res/layout/dialog_you_hui_quan.xml
+++ b/app/src/main/res/layout/dialog_you_hui_quan.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/tv_bnt"
+            android:layout_marginBottom="25dp"
             android:layout_alignStart="@id/iv_1"
             android:layout_alignTop="@id/iv_1"
             android:layout_alignEnd="@id/iv_1"
