--- a/app/src/main/res/layout/activity_facility_add_sb.xml
+++ b/app/src/main/res/layout/activity_facility_add_sb.xml
@@ -26,6 +26,7 @@
             android:padding="@dimen/dimen_15dp">
 
             <TextView
+                android:id="@+id/tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="@dimen/dp_10"
